[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/horrorTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://Sfx/zapsplat_household_alarm_clock_large_snooze_button_press_002_12969.wav" type="AudioStream" id=3]
[ext_resource path="res://Sfx/zapsplat_technology_radio_bluetooth_button_press_001_42895.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/Ghastly Panic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 5 )

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -258.0
margin_right = 258.0
custom_fonts/font = SubResource( 1 )
text = "

         This game is going to take your life"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenubox" type="VBoxContainer" parent="CenterContainer"]
margin_left = 444.0
margin_top = 209.0
margin_right = 579.0
margin_bottom = 390.0

[node name="Start" type="Button" parent="CenterContainer/MainMenubox"]
margin_right = 135.0
margin_bottom = 33.0
text = "Start"

[node name="Options" type="Button" parent="CenterContainer/MainMenubox"]
margin_top = 37.0
margin_right = 135.0
margin_bottom = 70.0
text = "options"

[node name="Credits" type="Button" parent="CenterContainer/MainMenubox"]
margin_top = 74.0
margin_right = 135.0
margin_bottom = 107.0
text = "credits"

[node name="Created by" type="Button" parent="CenterContainer/MainMenubox"]
margin_top = 111.0
margin_right = 135.0
margin_bottom = 144.0
text = "created by"

[node name="Exit" type="Button" parent="CenterContainer/MainMenubox"]
margin_top = 148.0
margin_right = 135.0
margin_bottom = 181.0
text = "exit"

[node name="Credits" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "

             the game:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -33.0
margin_right = 45.0
text = "close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="mouse_entered" from="CenterContainer/MainMenubox/Start" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MainMenubox/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MainMenubox/Options" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MainMenubox/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MainMenubox/Credits" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MainMenubox/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MainMenubox/Created by" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MainMenubox/Created by" to="." method="_on_Created_by_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MainMenubox/Exit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MainMenubox/Exit" to="." method="_on_Exit_pressed"]
[connection signal="mouse_entered" from="Credits/Close" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Credits/Close" to="." method="_on_Close_pressed"]
